<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF">

    <ScrollView
        android:id="@+id/scrollViewProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profileContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Profile Image -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/CircularShape" />

            <!-- Name TextView -->
            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Tester Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/profileImageView"
                app:layout_constraintTop_toTopOf="@id/profileImageView" />

            <!-- Nickname TextView -->
            <TextView
                android:id="@+id/nicknameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="J man"
                app:layout_constraintStart_toStartOf="@id/nameTextView"
                app:layout_constraintTop_toBottomOf="@id/nameTextView" />

            <!-- Birthday Label & Value -->
            <TextView
                android:id="@+id/birthdayLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Birthday:"
                app:layout_constraintBottom_toTopOf="@id/homepageLabelTextView"
                app:layout_constraintStart_toStartOf="@id/profileImageView"
                app:layout_constraintTop_toBottomOf="@id/profileImageView" />

            <TextView
                android:id="@+id/birthdayValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Not Set"
                app:layout_constraintBottom_toBottomOf="@id/birthdayLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/birthdayLabelTextView"
                app:layout_constraintTop_toTopOf="@id/birthdayLabelTextView" />

            <!-- Homepage Label & Value -->
            <TextView
                android:id="@+id/homepageLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Homepage:"
                app:layout_constraintStart_toStartOf="@id/birthdayLabelTextView"
                app:layout_constraintTop_toBottomOf="@id/birthdayLabelTextView" />

            <TextView
                android:id="@+id/homepageValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="cmput301.com"
                app:layout_constraintBottom_toBottomOf="@id/homepageLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/homepageLabelTextView"
                app:layout_constraintTop_toTopOf="@id/homepageLabelTextView" />

            <!-- Address Label & Value -->
            <TextView
                android:id="@+id/addressLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address:"
                app:layout_constraintStart_toStartOf="@id/homepageLabelTextView"
                app:layout_constraintTop_toBottomOf="@id/homepageValueTextView" />

            <!-- Phone Number Label & Value -->

            <TextView
                android:id="@+id/addressValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="123 App Street, Android City"
                app:layout_constraintBottom_toBottomOf="@+id/addressLabelTextView"
                app:layout_constraintStart_toEndOf="@+id/addressLabelTextView" />

            <TextView
                android:id="@+id/phoneNumberLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone Number:"
                app:layout_constraintStart_toStartOf="@id/addressLabelTextView"
                app:layout_constraintTop_toBottomOf="@id/addressLabelTextView" />

            <!-- Email Label & Value -->

            <TextView
                android:id="@+id/phoneNumberValueTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="+1234567890"
                app:layout_constraintStart_toEndOf="@id/phoneNumberLabelTextView"
                app:layout_constraintTop_toTopOf="@+id/phoneNumberLabelTextView"
                tools:layout_constraintTop_toTopOf="@id/phoneNumberLabelTextView" />

            <TextView
                android:id="@+id/emailLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:"
                app:layout_constraintStart_toStartOf="@id/phoneNumberLabelTextView"
                app:layout_constraintTop_toBottomOf="@id/phoneNumberValueTextView" />

            <TextView
                android:id="@+id/emailValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="justin@example.com"
                app:layout_constraintStart_toEndOf="@+id/emailLabelTextView"
                app:layout_constraintTop_toTopOf="@+id/emailLabelTextView" />

            <Button
                android:id="@+id/notificationsButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Notifications"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailLabelTextView" />

            <Button
                android:id="@+id/eventsButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Events"
                app:layout_constraintEnd_toEndOf="@id/notificationsButton"
                app:layout_constraintStart_toStartOf="@id/notificationsButton"
                app:layout_constraintTop_toBottomOf="@id/notificationsButton" />

            <Button
                android:id="@+id/announcementsButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Announcements"
                app:layout_constraintEnd_toEndOf="@id/eventsButton"
                app:layout_constraintStart_toStartOf="@id/eventsButton"
                app:layout_constraintTop_toBottomOf="@id/eventsButton" />

            <Button
                android:id="@+id/scanQRCodeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Scan QR Code for Check-In"
                app:layout_constraintEnd_toEndOf="@id/announcementsButton"
                app:layout_constraintStart_toStartOf="@id/announcementsButton"
                app:layout_constraintTop_toBottomOf="@id/announcementsButton" />

            <Switch
                android:id="@+id/toggleGeolocationSwitch"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:text="Toggle Geolocation"
                app:layout_constraintEnd_toEndOf="@id/scanQRCodeButton"
                app:layout_constraintStart_toStartOf="@id/scanQRCodeButton"
                app:layout_constraintTop_toBottomOf="@id/scanQRCodeButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
