<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEventActivity">

    <TextView
        android:id="@+id/NewEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="New Event"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/newEventPosterImageViewEdit"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_event_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Event Title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/NewEvent"
        app:layout_constraintTop_toBottomOf="@+id/NewEvent" />

    <EditText
        android:id="@+id/new_event_title_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Event Title"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/new_event_title"
        app:layout_constraintTop_toBottomOf="@+id/new_event_title" />

    <TextView
        android:id="@+id/new_event_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="Start Date/Time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/NewEvent"
        app:layout_constraintTop_toBottomOf="@+id/new_event_title_e" />

    <EditText
        android:id="@+id/new_event_start_time_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Start Date/Time"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/NewEvent"
        app:layout_constraintTop_toBottomOf="@+id/new_event_start_time" />

    <TextView
        android:id="@+id/new_event_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="End Date/Time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/NewEvent"
        app:layout_constraintTop_toBottomOf="@id/new_event_start_time_e" />

    <EditText
        android:id="@+id/new_event_end_time_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="End Date/Time"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/NewEvent"
        app:layout_constraintTop_toBottomOf="@+id/new_event_end_time" />

    <TextView
        android:id="@+id/new_event_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="Description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/NewEvent"
        app:layout_constraintTop_toBottomOf="@id/new_event_end_time_e" />

    <EditText
        android:id="@+id/new_event_description_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Description"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/NewEvent"
        app:layout_constraintTop_toBottomOf="@+id/new_event_description" />

    <Button
        android:id="@+id/btnCreateNewEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="#009688"
        android:text="Create"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_event_description_e" />

</androidx.constraintlayout.widget.ConstraintLayout>